@@ -14,11 +14,11 @@ import java.util.Collection;
 import java.util.List;
 
 import org.apache.commons.io.IOUtils;
-import org.nhindirect.config.BaseTestPlan;
-import org.nhindirect.config.SpringBaseTest;
-import org.nhindirect.config.TestUtils;
 import org.nhindirect.config.model.utils.CertUtils;
 import org.nhindirect.config.repository.CertificateRepository;
+import org.nhindirect.config.test.BaseTestPlan;
+import org.nhindirect.config.test.SpringBaseTest;
+import org.nhindirect.config.test.TestUtils;
 import org.nhindirect.config.model.Certificate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpEntity;
@@ -55,7 +55,7 @@ public class CertificateResource_removeCertificatesByIdsTest extends SpringBaseT
 					{
 						final HttpEntity<Certificate> requestEntity = new HttpEntity<>(addCert);
 						final ResponseEntity<Void> resp = testRestTemplate.exchange("/certificate", HttpMethod.PUT, requestEntity, Void.class);
-						if (resp.getStatusCodeValue() != 201)
+						if (resp.getStatusCode().value() != 201)
 							throw new HttpClientErrorException(resp.getStatusCode());
 					});			
 				}
@@ -76,7 +76,7 @@ public class CertificateResource_removeCertificatesByIdsTest extends SpringBaseT
 						testRestTemplate.exchange("/certificate/ids/{ids}",
 		                HttpMethod.DELETE, null, Void.class, builder.toString());
 				
-				if (resp.getStatusCodeValue() != 200)
+				if (resp.getStatusCode().value() != 200)
 					throw new HttpClientErrorException(resp.getStatusCode());
 				
 				
@@ -289,7 +289,7 @@ public class CertificateResource_removeCertificatesByIdsTest extends SpringBaseT
 				@Override
 				protected Collection<Long> getIdsToRemove()
 				{
-					return Arrays.asList(new Long(1234L));
+					return Arrays.asList(Long.valueOf(1234L));
 				}
 				
 				@Override
@@ -297,7 +297,7 @@ public class CertificateResource_removeCertificatesByIdsTest extends SpringBaseT
 				{
 					assertTrue(exception instanceof HttpClientErrorException);
 					HttpClientErrorException ex = (HttpClientErrorException)exception;
-					assertEquals(500, ex.getRawStatusCode());
+					assertEquals(500, ex.getStatusCode().value());
 				}
 			}.perform();
 		}			
